<resources>
    <string name="App_Name" translatable="false">Unstoppable</string>
    <string name="Alert_Cancel">Cancel</string>
    <string name="Alert_Copy">Copy</string>
    <string name="Alert_Close">Close</string>
    <string name="Alert_Loading">Loading...</string>
    <string name="Alert_Restart">Restart</string>
    <string name="Alert_Skip" translatable="false">SKIP</string>
    <string name="Alert_Select" translatable="false">SELECT</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Button_Skip">Skip</string>
    <string name="Button_Next">Next</string>
    <string name="Button_Enable">Enable</string>
    <string name="Button_Disable">Disable</string>
    <string name="Button_Close">Close</string>
    <string name="Button_Ok">OK</string>
    <string name="Button_Done">Done</string>
    <string name="Button_Retry">Retry</string>
    <string name="Button_Change">Change</string>
    <string name="Button_Add">Add</string>
    <string name="Button_Approve">Approve</string>
    <string name="Button_Connect">Connect</string>
    <string name="Button_Reject">Reject</string>
    <string name="Button_Disconnect">Disconnect</string>
    <string name="Button_Start">Start</string>
    <string name="Button_Create">Create</string>
    <string name="Button_Restore">Restore</string>
    <string name="Button_Reset">Reset</string>
    <string name="Error">Error</string>
    <string name="NotAvailable">N/A</string>
    <string name="None">None</string>
    <string name="Any">Any</string>
    <string name="Wallet">%s Wallet</string>
    <string name="FooterText" translatable="false">© Horizontal Systems 2021</string>
    <string name="Intro_Wallet_Description">Store and Trade crypto. Have full control over assets. Remain anonymous.</string>
    <string name="Intro_Invest_Title">Invest Wisely</string>
    <string name="Intro_Invest_Description">Unmatched trading, monitoring and analytical instruments.</string>
    <string name="Intro_Independence_Title">Make finances independent</string>
    <string name="Intro_Independence_Description">The funds are under your exclusive control and no other entity.</string>
    <string name="Intro_Privacy_Title">Keep your privacy safe</string>
    <string name="Intro_Privacy_Description">Remain incognito and be able to keep your information private.</string>
    <string name="RootedDevice_Button_Understand">I Understand</string>
    <string name="Welcome_PrivacySettings">Privacy Settings</string>
    <string name="Welcome_CreateWallet">Create Wallet</string>
    <string name="Welcome_RestoreWallet">Restore Wallet</string>
    <string name="Welcome_Version" translatable="false">version %s</string>
    <string name="CreateWallet_Title">New Wallet</string>
    <string name="CreateWallet_Mnemonic">Mnemonic</string>
    <string name="Passphrase">Passphrase</string>
    <string name="CreateWallet_N_Words">%s words</string>
    <string name="CreateWallet_PassphraseConfirm">Confirm</string>
    <string name="CreateWallet_Error_EmptyPassphrase">Passphrase cannot be empty</string>
    <string name="CreateWallet_Error_PassphraseForbiddenSymbols">Please use only latin letters and numbers for the passphrase</string>
    <string name="CreateWallet_Error_InvalidConfirmation">Passphrase confirmation does not match</string>
    <string name="EnterPassphrase">Passphrase</string>
    <string name="CreateWallet_PassphraseDescription">Passphrase add additional security layer to the wallets enabling users to create multiple independent multi-coin wallets using a single mnemonic recovery phrase (secret 12 words) but associated with different passwords. \n\nTo restore these wallets a user will require mnemonic recovery phrase as well as a password for each to be restored wallet.</string>
    <string name="RateApp_Title_Rate_This_App">Rate this App</string>
    <string name="RateApp_Description_Rate_This_App">Enjoying Unstoppable Wallet? Please take a moment to rate this app</string>
    <string name="RateApp_Button_RateIt">Rate It</string>
    <string name="RateApp_Button_NotNow">Not now</string>
    <string name="Restore_ChooseWallet">Choose Wallet</string>
    <string name="Restore_Enter_Key_Title">Enter Key</string>
    <string name="Restore_Enter_Key_Description_Mnemonic">Enter your private key for %1s Wallet which consists of %2s words. The words needs to be entered in correct order and separated by spaces.</string>
    <string name="Restore_Mnemonic_Description">Enter your mnemonic which consists of 12 or 24 words. The words needs to be entered in correct order and separated by spaces.</string>
    <string name="Restore_ValidationFailed">Incorrect Key</string>
    <string name="Restore_InvalidWordCount">Invalid words count: %1$d but required %2$d</string>
    <string name="Restore_Error_MnemonicWordCount">Wrong words count. Must be 12 or 24. You entered: %d</string>
    <string name="Restore_Error_EmptyPassphrase">Passphrase cannot be empty</string>
    <string name="Restore_InvalidChecksum">Invalid Checksum</string>
    <string name="Restore_PassphraseDescription">Enter your passphrase that you used when creating this mnemonic phrase.</string>
    <string name="Select_Coins">Choose Crypto</string>
    <string name="Restore_ZCash_BirthdayHeight">Birthday Height</string>
    <string name="Restore_ZCash_BirthdayHeight_Hint">If you know a birthday height for your Zcash wallet add it below to speedup syncing process.</string>
    <string name="Backup_Intro_Title">Backup</string>
    <string name="Backup_Intro_TitleShow">Show Key</string>
    <string name="Backup_Intro_Subtitle">The private key that will be shown next is the only way to restore your funds if your phone is ever lost, stolen, broken etc.\n\nMake sure that no one is watching your screen.\n\nThe coins controlled by this key: %s.</string>
    <string name="Backup_DisplayTitle">Private Key</string>
    <string name="Backup_Confirmation_Description">Enter words from your %s key</string>
    <string name="Backup_Confirmation_FailureAlertText"> Words do not match</string>
    <string name="Backup_Confirmation_CheckTitle">Check…</string>
    <string name="Backup_Button_Backup">Backup</string>
    <string name="Backup_Button_ShowKey">Show Key</string>
    <string name="Market_Field_MarketCap">MCap</string>
    <string name="Market_Field_Volume">Volume</string>
    <string name="Market_Field_PriceDiff">Price</string>
    <string name="Market_Title">Markets</string>
    <string name="Market_Search">Search</string>
    <string name="Market_FilterSection_MarketParameters">MARKET PARAMETERS</string>
    <string name="Market_FilterSection_PriceParameters">PRICE PARAMETERS</string>
    <string name="Market_Field_All" translatable="false">All</string>
    <string name="Market_Field_HighestCap">Highest Cap</string>
    <string name="Market_Field_LowestCap">Lowest Cap</string>
    <string name="Market_Field_HighestVolume">Highest Volume</string>
    <string name="Market_Field_LowestVolume">Lowest Volume</string>
    <string name="Market_Field_HighestPrice">Highest Price</string>
    <string name="Market_Field_LowestPrice">Lowest Price</string>
    <string name="Market_Field_NewProject" translatable="false">New Project</string>
    <string name="Market_Sort_PopupTitle">Sort by</string>
    <string name="Market_TotalMarketCap">Total Market Cap</string>
    <string name="Market_BtcDominance">BTC Dominance</string>
    <string name="Market_Volume24h">24h Volume</string>
    <string name="Market_TvlDeFi">TVL in DeFi</string>
    <string name="Market_DeFiCap">DeFi Cap</string>
    <string name="Market_SeeAll">See All</string>
    <string name="Market_PoweredByApi" translatable="false">Powered by CoinGeko API</string>
    <string name="Market_Tab_Overview">Overview</string>
    <string name="Market_Tab_Discovery">Discovery</string>
    <string name="Market_Tab_Watchlist">Watchlist</string>
    <string name="Market_Tab_Watchlist_EmptyList">Watchlist is empty.\nYou may add coins to watchlist using star icon on a coin page.</string>
    <string name="Market_Category_Rated">Rated</string>
    <string name="Market_Category_Rated_Description">Token ratings based on project security and market liquidity.</string>
    <string name="Market_Category_Blockchains">Blockchains</string>
    <string name="Market_Category_Blockchains_Description">Native cryptocurrencies on major blockchains. </string>
    <string name="Market_Category_Dexes">DEXes</string>
    <string name="Market_Category_Dexes_Description">Decentralized cryptocurrency exchanges.</string>
    <string name="Market_Category_Lending">Lending</string>
    <string name="Market_Category_Lending_Description">Protocols for lending and borrowing.</string>
    <string name="Market_Category_Privacy">Privacy</string>
    <string name="Market_Category_Privacy_Description">Projects working on privacy solutions.</string>
    <string name="Market_Category_Scaling">Scaling</string>
    <string name="Market_Category_Scaling_Description">Solutions for faster blockchain transactions.</string>
    <string name="Market_Category_Oracles">Oracles</string>
    <string name="Market_Category_Oracles_Description">Connecting real world data to smart contracts.</string>
    <string name="Market_Category_Prediction">Prediction</string>
    <string name="Market_Category_Prediction_Description">Markets to bet on events in the future.</string>
    <string name="Market_Category_YieldAggregators">Yield Aggregators</string>
    <string name="Market_Category_YieldAggregators_Description">Solutions for earning from idle crypto assets.</string>
    <string name="Market_Category_FiatStableCoins">Fiat Stablecoins</string>
    <string name="Market_Category_FiatStableCoins_Description">Crypto tokens pegged 1–1 to fiat currency.</string>
    <string name="Transactions_Title">Transactions</string>
    <string name="Settings_Title">Settings</string>
    <string name="auth_exchange">Exchange</string>
    <string name="auth_home_desc">Login or Sign Up to Begin Swapping</string>
    <string name="auth_trader">Trader</string>
    <string name="auth_signup">Sign Up</string>
    <string name="auth_want_trade">I want to trade tokens</string>
    <string name="auth_trade_list_token">I want to trade and list my coin/token</string>
    <string name="auth_email_address">Email Address</string>
    <string name="Button_Back">Back</string>
    <string name="auth_first_name">First Name</string>
    <string name="auth_last_name" >Last Name</string>
    <string name="auth_password">Password</string>
    <string name="auth_create_account">Create an Account</string>
    <string name="auth_i_agree">
        I certified that I am 18 years of age or older, and I agree to the
        <a href="https://exzocoin.com/#">User Agreement</a> and <a href="https://exzocoin.com/#">Privacy Policy</a>
    </string>
    <string name="auth_verify_email">Verify your Email</string>
    <string name="auth_email_desc">Hi, %s! We sent a verification email to %s. Please tap the link inside the email to confirm the verification.</string>
    <string name="auth_resend_verification">Resend the Verification</string>
    <string name="Button_Continue">Continue</string>
    <string name="auth_2step_success">2-Step Verification set up is Success</string>
    <string name="auth_2step_success_desc">Now you are ready to  start trading cryptocurrency</string>
    <string name="Button_Trading_Now">Start Trading Now</string>
    <string name="auth_verify_account">Verify Account</string>
    <string name="Button_Take_Photo">Take Photo</string>
    <string name="auth_scan_front">Scan the front</string>
    <string name="auth_scan_photo_desc">Take photo of the front of your identity card</string>
    <string name="auth_login_now">Login Now</string>
    <string name="auth_you_have_account">You have an account?</string>
    <string name="home">Home</string>
    <string name="Swap_title">Swap</string>
</resources>