<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_balance"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_market_24"
        android:title="@string/Market_Title" />

    <item
        android:id="@+id/navigation_swap"
        android:icon="@drawable/ic_swap"
        android:title="@string/Swap_title" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_coin"
        android:title="@string/Transactions_Title" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_profile"
        android:title="@string/Settings_Title" />

</menu>
